# FinanceGPT-Multi-Agent-Financial-Intelligence-System

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/agents/: commentary_agent.py  prompts.py  test_commentary_agent.py
app/analysis/: metrics.py  summary.py  test_analysis.py  trends.py
app/anomaly_detection/: commentary.py  detector.py  preprocessing.py  test_anomaly_detection.py  visualization.py
app/api/: main.py
app/config/: settings.py
app/core/: llm.py  test_llm.py
app/data/: loader.py  metadata_extractor.py  preprocessing.py  schema_mapper.py  semantic_mapper.py  validator.py
app/forecasting/: commentary.py  forecaster.py  preprocessing.py  test_forecasting.py  visualization.py
app/insights/: extractor.py  formatter.py  risk_signals.py  trends.py
app/intelligence/: column_detector.py  dataset_profiler.py  insight_targets.py  kpi_engine.py  relevance_scorer.py  target_selector.py  test_intelligence.py
app/orchestration/: dashboard_planner.py  intent_router.py  nodes.py  prompts.py  router.py  state.py  test_workflow.py  workflow.py
app/prompts/: rag_prompt.py  schema_mapping_prompt.py
app/query_engine/: agent.py
app/rag/: chroma_manager.py  embeddings.py  ingestion.py  query_engine.py  retriever.py  test_query_engine.py  test_rag.py
app/utils/: formatters.py
app/visualization/: charts.py  recommender.py
dashboard/: Home.py  styles.py
dashboard/pages/: Analysis.py  Anomalies.py  Forecasting.py  Query_Assistant.py
datasets/: sample_financial_data.csv
notebooks/: test.py
uploads/: clean_bookings.csv
(+6 files in other folders)
